--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-mongodb_url= mongodb://localhost:27017/hi
-
-url2= mongodb+srv://sndsatya:QtAy7QbfwCnzUhvu@clustersnd.adfao0n.mongodb.net/hi
-
-secret= teydgdg546
-
-VITE_SOCKET_URL= http://localhost:4000
+origin = http://localhost:8888
